tryphon_macros/tests/ui/fail/missing_attributes.stderr
error: No env attribute found
 --> tests/ui/fail/missing_attributes.rs:6:5
  |
6 |     host: String,
  |     ^^^^
